[gd_scene load_steps=16 format=3 uid="uid://bhqv0jn2omarc"]

[ext_resource type="FontFile" uid="uid://btrxwdkr3ysk" path="res://assets/fontes/Quaxy Bold Italic.ttf" id="1_bn0s8"]
[ext_resource type="Script" uid="uid://c436q8miv2ouj" path="res://scripts/scenes/hud/game_over.gd" id="1_f4q6e"]
[ext_resource type="Texture2D" uid="uid://7scovhwmy835" path="res://assets/swords_knight/Factions/Knights/Troops/Warrior/Purple/Warrior_Purple/Warrior_Purple-15.png" id="3_f4q6e"]
[ext_resource type="Texture2D" uid="uid://c6k7ajvu5xocd" path="res://assets/swords_knight/UI/Ribbons/Ribbon_Blue_3Slides.png" id="3_yr3al"]
[ext_resource type="Texture2D" uid="uid://cbdm4b385h7og" path="res://assets/hud/GameOver_29.png" id="4_t53w3"]
[ext_resource type="Texture2D" uid="uid://cydqhkehflrjn" path="res://assets/swords_knight/UI/Ribbons/Ribbon_Blue_Connection_Up.png" id="5_ksy6i"]

[sub_resource type="Animation" id="Animation_xesjr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.42)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("game_over/game_over_text:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-391, 711)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("game_over/game_over_text:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("game_over:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(257, -494)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("game_over:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("bottom_panel/CenterContainer:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-865, 56)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("bottom_panel:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1259, 695)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("bottom_panel:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("restart_button:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("restart_button:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-987, 749)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("restart_button:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}

[sub_resource type="Animation" id="Animation_g58sp"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.663)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("game_over/game_over_text:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-391, 711), Vector2(-391.5, -94.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("game_over/game_over_text:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1422, 355)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("game_over:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(639, 166)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("game_over:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-54, -494), Vector2(257, 95)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("game_over/game_over_text:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.3, 0.3)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("game_over/game_over_text:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.833333, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("game_over:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("bottom_panel/CenterContainer:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-865, 56), Vector2(26.5, 55.5)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("bottom_panel:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1259, 695), Vector2(346, 350)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("bottom_panel:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("bottom_panel:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 1.62, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("bottom_panel/CenterContainer:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(1.2, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("new_game_label:self_modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("restart_button:disabled")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("restart_button:scale")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(1, 1)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("restart_button:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-987, 749), Vector2(54, 380)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("restart_button:self_modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 1.01232, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hf5rn"]
resource_name = "new_game"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("new_game_label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.293), Color(1, 1, 1, 1), Color(1, 1, 1, 0.294118), Color(1, 1, 1, 1), Color(1, 1, 1, 0.294118), Color(1, 1, 1, 1), Color(1, 1, 1, 0.294118), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("restart_button:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_label_new_game"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_okffc"]
_data = {
&"RESET": SubResource("Animation_xesjr"),
&"default": SubResource("Animation_g58sp"),
&"new_game": SubResource("Animation_hf5rn")
}

[sub_resource type="LabelSettings" id="LabelSettings_6ajvr"]
font = ExtResource("1_bn0s8")
font_size = 48
font_color = Color(0.909361, 0, 0.131482, 1)
outline_size = 2
outline_color = Color(0.0605303, 0.0605303, 0.0605303, 1)
shadow_size = 5
shadow_color = Color(0.0768358, 0.0768358, 0.0768358, 0.516)

[sub_resource type="Theme" id="Theme_pm3ni"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y6deb"]
texture = ExtResource("3_yr3al")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a035k"]
texture = ExtResource("5_ksy6i")
texture_margin_left = 16.0
texture_margin_top = 32.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
axis_stretch_horizontal = 1
region_rect = Rect2(0, 0, 64, 72)

[sub_resource type="LabelSettings" id="LabelSettings_k8njn"]
font = ExtResource("1_bn0s8")
font_size = 32
font_color = Color(0.909361, 0, 0.131482, 1)
outline_size = 2
outline_color = Color(0.0605303, 0.0605303, 0.0605303, 1)
shadow_size = 5
shadow_color = Color(0.0768358, 0.0768358, 0.0768358, 0.516)

[node name="Game_over" type="CanvasLayer"]
script = ExtResource("1_f4q6e")

[node name="anim_game_over" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_okffc")
}
autoplay = "default"

[node name="background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.42)

[node name="new_game_label" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -469.0
offset_top = -50.0
offset_right = 469.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
text = "Clique  no  guerreiro  pra   iniciar nova  partida"
label_settings = SubResource("LabelSettings_6ajvr")
vertical_alignment = 1

[node name="restart_button" type="TextureButton" parent="."]
offset_left = 54.0
offset_top = 380.0
offset_right = 246.0
offset_bottom = 572.0
scale = Vector2(3, 3)
disabled = true
texture_normal = ExtResource("3_f4q6e")

[node name="game_over" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -319.0
offset_top = 95.0
offset_right = 320.0
offset_bottom = 261.0
grow_horizontal = 2
theme = SubResource("Theme_pm3ni")
theme_override_styles/panel = SubResource("StyleBoxTexture_y6deb")

[node name="game_over_text" type="TextureRect" parent="game_over"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -711.0
offset_top = -177.5
offset_right = 711.0
offset_bottom = 177.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(711, 150)
texture = ExtResource("4_t53w3")

[node name="bottom_panel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -298.0
offset_right = 231.0
offset_bottom = -60.0004
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_pm3ni")
theme_override_styles/panel = SubResource("StyleBoxTexture_a035k")

[node name="CenterContainer" type="CenterContainer" parent="bottom_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -63.4998
offset_right = 204.0
offset_bottom = 63.5002
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="bottom_panel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 20
columns = 2

[node name="tempo_vivo" type="Label" parent="bottom_panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Tempo  vivo:"
label_settings = SubResource("LabelSettings_k8njn")
vertical_alignment = 1

[node name="tempo_label" type="Label" parent="bottom_panel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "000"
label_settings = SubResource("LabelSettings_k8njn")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ouro" type="Label" parent="bottom_panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Ouro  recolhido"
label_settings = SubResource("LabelSettings_k8njn")
vertical_alignment = 1

[node name="ouro_label" type="Label" parent="bottom_panel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "000"
label_settings = SubResource("LabelSettings_k8njn")
horizontal_alignment = 2
vertical_alignment = 1

[node name="monstros_abatidos" type="Label" parent="bottom_panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monstros Abatidos:"
label_settings = SubResource("LabelSettings_k8njn")
vertical_alignment = 1

[node name="monstros_label" type="Label" parent="bottom_panel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "000"
label_settings = SubResource("LabelSettings_k8njn")
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="animation_finished" from="anim_game_over" to="." method="_game_over_animation_finished"]
[connection signal="pressed" from="restart_button" to="." method="_restart_button"]
